<resources>
    <string name="app_name">TestRestfulApi</string>
    <string name="home">Home</string>
    <string name="location">Find your location</string>
    <string name="du_lich_ha_noi">Du lịch Hà Nội</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="number_target">Number target nearest</string>
    <string name="introduce">Introduce</string>
    <string name="relative_image">Relative image</string>
</resources>
